--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>Apala School </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Apala School Of Education</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -130,7 +132,7 @@
             <div class="col-md-12 col-sm-12">
 
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner" style="position: absolute;">
+                    <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="./photos/schoolimg2.jpg" height="580px" width="800px"
                                 alt="First slide">
@@ -152,9 +154,9 @@
 
     </div>
 
-    <div class="container">
+    <div class="container" style="margin-top: -70px;">
         <div class="row">
-            <div class="col-md-4 border">
+            <div class="col-md-4 border" style="padding: 5px;">
                 <h2>Vision</h2>
                 <p>As we envision a future where every student discovers their unique potential, our commitment to
                     fostering creativity and critical thinking is reflected in every aspect of our curriculum. Through
@@ -187,8 +189,8 @@
     </div>
     <div class="data2">
         <div class="row featurette data">
-            <div class="col-md-7">
-                <h2 class="featurette-heading" >Welcome to Apala School </h2>
+            <div class="col-md-7 col-sm-12">
+                <h2 class="featurette-heading">Welcome to Apala School </h2>
                 <span class="text-muted">We Will Shape the Future</span>
                 <p>Apala School of Education,Nohar, is one of the most prestigious C.B.S.E. Affiliated Schools of the
                     region.</p>
@@ -202,8 +204,105 @@
                     NEWS & EVENTS
                 </p>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 col-sm-12">
                 <img src="./photos/schoolimg1.jpg " alt="" height="250px" width="400px">
+            </div>
+        </div>
+    </div>
+    <div class="container3">
+        <div class="row contain">
+            <div class="col-md-4 col-sm-12 bor1">
+                <h2>News & Event <i class="fa-solid fa-bell "></i></h2>
+                <div class="box1">
+                    <marquee direction="down">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, pariatur dignissimos rem possimus,
+                        voluptate est beatae aliquam fugiat repellat qui quidem necessitatibus nisi quia. Asperiores,
+                        corrupti illum. Eum, ad ut! </marquee>
+
+
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12 bor2">
+                <h2>Recent Happening <i class="fa-solid fa-photo-film"></i></h2>
+                <div class="box2">
+                    <marquee direction="down">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, sequi
+                        numquam, cumque cum distinctio dolorem at libero laudantium dolor a cupiditate fugiat nam
+                        consequatur aliquam ea iure! Quod, velit consequatur.</marquee>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-12 bor3">
+                <h2>Achievement <i class="fa-solid fa-trophy"></i></h2>
+                <div class="box3">
+                    <marquee direction="down">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, sequi
+                        numquam, cumque cum distinctio dolorem at libero laudantium dolor a cupiditate fugiat nam
+                        consequatur aliquam ea iure! Quod, velit consequatur.</marquee>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row" id="cor">
+            <div class="col-md-12 col-sm-12">
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./photos/schoolimg2.jpg" class="d-block w-100 " alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 id="cor1">Skilled Educators Alliance</h2>
+                                <p>The seasoned faculty at Apala School forms a dynamic team devoted to academic
+                                    excellence.
+                                    Drawing on rich experience, these educators are committed to fostering student
+                                    growth and
+                                    learning.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container5">
+        <h3> OUR TESTINOMIAL</h3>
+        <p>People express positivity, shaping a world of optimism and harmony</p>
+        <div class="row mb-2" id="test">
+            <div class="col-md-5 col-sm-6 test1">
+                <div
+                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <strong class="d-inline-block mb-2 text-primary"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></strong>
+                        <p class="card-text mb-auto">“
+                            The teachers are super sweet and amazing. I’ve never worried about while I am under their
+                            care and guidance.
+                            .”</p>
+                            <div class="cardimg1">
+                                <i class="fa-regular fa-image"></i>
+                            </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-2">
+
+            </div>
+            <div class="col-md-5 col-sm-6 test2 ">
+                <div
+                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <strong class="d-inline-block mb-2 text-success"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></strong>
+                        <p class="mb-auto">“
+                            Our experience at Apala School,Nohar has been exceptional. The teachers are truly invested
+                            in my children’s education and their growth as learners.”</p>
+                            <div class="cardimg2">
+                                <i class="fa-regular fa-image"></i>
+                            </div>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
