--- a/index.html
+++ b/index.html
@@ -156,40 +156,53 @@
 
     <div class="container" style="margin-top: -70px;">
         <div class="row">
-            <div class="col-md-4 border" style="padding: 5px;">
-                <h2>Vision</h2>
-                <p>As we envision a future where every student discovers their unique potential, our commitment to
-                    fostering creativity and critical thinking is reflected in every aspect of our curriculum. Through
-                    collaborative projects, advanced technologies, and real-world experiences, we aim to prepare
-                    students not just for exams but for the challenges and opportunities of the 21st century.
+            <div class="col-md-4 border">
+                <div class="border1">
+                    <h2>Vision</h2>
+                    <p>As we envision a future where every student discovers their unique potential, our commitment to
+                        fostering creativity and critical thinking is reflected in every aspect of our curriculum.
+                        Through
+                        collaborative projects, advanced technologies, and real-world experiences, we aim to prepare
+                        students not just for exams but for the challenges and opportunities of the 21st century.
 
-                </p>
+                    </p>
 
+                </div>
             </div>
             <div class="col-md-4 border">
-                <h2>Motive</h2>
-                <p>Apala School,Nohar is generally focused on providing quality education, fostering holistic
-                    development,technological proficiency, and a keen awareness of environmental sustainability. This
-                    school nurturing values to prepare students for future challenges.Apala, Nohar is religiously
-                    committed to the innovation and excellence in teaching and learning and the implementation of
-                    superlative philosophy, practices and curriculum to bring the optimum out of its students. </p>
+                <div class="border2">
+                    <h2>Motive</h2>
+                    <p>Apala School,Nohar is generally focused on providing quality education, fostering holistic
+                        development,technological proficiency, and a keen awareness of environmental sustainability.
+                        This
+                        school nurturing values to prepare students for future challenges.Apala, Nohar is religiously
+                        committed to the innovation and excellence in teaching and learning and the implementation of
+                        superlative philosophy, practices and curriculum to bring the optimum out of its students. </p>
+                </div>
             </div>
             <div class="col-md-4 border">
-                <h2>Moto & Objective</h2>
-                <p>The motto of Apala School is typically "Service Before Self."This school's aim to create a supportive
-                    atmosphere that values diversity and inclusivity. The overarching goal is to prepare students for
-                    the challenges of the future by providing a well-rounded education that goes beyond academics.
-                    Additionally,Apala usually focuses on honing communication skills, teamwork, and a strong sense of
-                    discipline that aspires to create an environment that encourages both personal and academic growth.
-                    Sports, arts, and extracurricular activities are typically integrated into the curriculum to ensure
-                    a holistic development approach
-                </p>
+                <div class="border3">
+                    <h2>Moto & Objective</h2>
+                    <p>The motto of Apala School is typically "Service Before Self."This school's aim to create a
+                        supportive
+                        atmosphere that values diversity and inclusivity. The overarching goal is to prepare students
+                        for
+                        the challenges of the future by providing a well-rounded education that goes beyond academics.
+                        Additionally,Apala usually focuses on honing communication skills, teamwork, and a strong sense
+                        of
+                        discipline that aspires to create an environment that encourages both personal and academic
+                        growth.
+                        Sports, arts, and extracurricular activities are typically integrated into the curriculum to
+                        ensure
+                        a holistic development approach.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
     <div class="data2">
         <div class="row featurette data">
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-8 col-sm-12">
                 <h2 class="featurette-heading">Welcome to Apala School </h2>
                 <span class="text-muted">We Will Shape the Future</span>
                 <p>Apala School of Education,Nohar, is one of the most prestigious C.B.S.E. Affiliated Schools of the
@@ -204,7 +217,7 @@
                     NEWS & EVENTS
                 </p>
             </div>
-            <div class="col-md-5 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <img src="./photos/schoolimg1.jpg " alt="" height="250px" width="400px">
             </div>
         </div>
@@ -273,14 +286,17 @@
                 <div
                     class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-primary"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></strong>
-                        <p class="card-text mb-auto">“
+                        <strong class="d-inline-block mb-2 text-primary "><i class="fa-solid fa-star  icon1"></i><i
+                                class="fa-solid fa-star  icon1"></i><i class="fa-solid fa-star icon1 "></i><i
+                                class="fa-solid fa-star icon1 "></i><i class="fa-solid fa-star icon1 "></i></strong>
+                        <p class="card-text mb-auto">
                             The teachers are super sweet and amazing. I’ve never worried about while I am under their
                             care and guidance.
                             .”</p>
-                            <div class="cardimg1">
-                                <i class="fa-regular fa-image"></i>
-                            </div>
+                        <div class="cardimg1">
+                            <i class="fa-regular fa-image"></i>
+                            <div class="name">Priya</div>
+                        </div>
 
                     </div>
 
@@ -293,15 +309,125 @@
                 <div
                     class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></strong>
+                        <strong class="d-inline-block mb-2 text-success icon2"><i class="fa-solid fa-star  icon2"></i><i
+                                class="fa-solid fa-star icon2"></i><i class="fa-solid fa-star icon2"></i><i
+                                class="fa-solid fa-star icon2"></i><i class="fa-solid fa-star icon2"></i></strong>
                         <p class="mb-auto">“
-                            Our experience at Apala School,Nohar has been exceptional. The teachers are truly invested
+                            Our experience has been exceptional. The teachers are truly invested
                             in my children’s education and their growth as learners.”</p>
-                            <div class="cardimg2">
-                                <i class="fa-regular fa-image"></i>
-                            </div>
+                        <div class="cardimg2">
+                            <i class="fa-regular fa-image"> </i>
+                            <div class="name">Raya</div>
+
+                        </div>
 
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 col-sm-4">
+                <div class="details">
+                    <h2>Two Decades Of Expertise In The Relevant Field.</h2>
+                    <p>Two decades dedicated to mastering the intricacies of the field, honing skills, and cultivating a
+                        profound understanding of its dynamics.</p>
+
+                    <div class="doc">
+                        <div class="row">
+                            <div class="col-md-4 col-sm-4">
+                                <div class="card" style="width: 18rem; height: 11rem; margin-top: 120px;">
+                                    <div class="card-body">
+                                        <div class="teacher"><i class="fa-solid fa-chalkboard-user"></i></div>
+                                        <h3 class="card-title" style="margin-top: 4px;">90</h3>
+                                        <h2> Teachers</h2>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4 col-sm-12">
+                                <div class="card" style="width: 18rem; height: 11rem; margin-top: 120px;">
+                                    <div class="card-body">
+                                        <div class="student"><i class="fa-solid fa-user"></i></div>
+                                        <h3 class="card-title" style="margin-top: 4px;">1500</h3>
+                                        <h2> Students Enroll</h2>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4 col-sm-4">
+                                <div class="card" style="width: 18rem; height: 11rem; margin-top: 120px;">
+                                    <div class="card-body">
+                                        <div class="branch"><i class="fa-solid fa-school"></i></div>
+                                        <h3 class="card-title" style="margin-top: 4px;">3</h3>
+                                        <h2> Branch</h2>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <div class="why">
+                    <h2>WHY CHOOSE US</h2>
+                    <p>Two decades dedicated to mastering the intricacies of the field, honing skills, and cultivating a
+                        profound understanding of its dynamics.</p>
+
+                        <div class="couz">
+                            <div class="row">
+                                <div class="col-md-2 col-sm-12">
+                                    <div class="decade">
+                                        <i class="fa-solid fa-baseball"></i>
+                                        <h5>Sports Facilities</h5>
+                                        
+                                      </div>
+                                    </div>
+                                    <div class="col-md-2 col-sm-12">
+                                        <div class="decade">
+                                            <i class="fa-solid fa-book-open"></i>
+                                            <h5>Book Library</h5>
+                                </div>
+                                </div>
+                                <div class="col-md-2 col-sm-12">
+                                    <div class="decade">
+                                        <i class="fa-solid fa-flask-vial"></i>
+                                        <h5> Science labs</h5>
+                            </div>
+                            </div>
+
+                            <div class="col-md-2 col-sm-12">
+                                <div class="decade">
+                                    <i class="fa-solid fa-palette"></i>
+                                    <h5>Art & Craft</h5>
+                        </div>
+                        </div>
+
+                        <div class="col-md-2 col-sm-12">
+                            <div class="decade">
+                                <i class="fa-solid fa-chalkboard"></i>
+                                <h5>Foundation Class</h5>
+                    </div>
+                    </div>
+                    <div class="col-md-2 col-sm-12">
+                        <div class="decade">
+                            <i class="fa-solid fa-graduation-cap"></i>
+                            <h5>Alumini Platform</h5>
+                </div>
+                </div>
+
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
