--- a/index.html
+++ b/index.html
@@ -384,54 +384,77 @@
                     <p>Two decades dedicated to mastering the intricacies of the field, honing skills, and cultivating a
                         profound understanding of its dynamics.</p>
 
-                        <div class="couz">
-                            <div class="row">
-                                <div class="col-md-2 col-sm-12">
-                                    <div class="decade">
-                                        <i class="fa-solid fa-baseball"></i>
-                                        <h5>Sports Facilities</h5>
-                                        
-                                      </div>
-                                    </div>
-                                    <div class="col-md-2 col-sm-12">
-                                        <div class="decade">
-                                            <i class="fa-solid fa-book-open"></i>
-                                            <h5>Book Library</h5>
+                    <div class="couz">
+                        <div class="row">
+                            <div class="col-md-2 col-sm-12">
+                                <div class="decade">
+                                    <i class="fa-solid fa-baseball"></i>
+                                    <h5>Sports Facilities</h5>
+
                                 </div>
-                                </div>
-                                <div class="col-md-2 col-sm-12">
-                                    <div class="decade">
-                                        <i class="fa-solid fa-flask-vial"></i>
-                                        <h5> Science labs</h5>
                             </div>
+                            <div class="col-md-2 col-sm-12">
+                                <div class="decade">
+                                    <i class="fa-solid fa-book-open"></i>
+                                    <h5>Book Library</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-sm-12">
+                                <div class="decade">
+                                    <i class="fa-solid fa-flask-vial"></i>
+                                    <h5> Science labs</h5>
+                                </div>
                             </div>
 
                             <div class="col-md-2 col-sm-12">
                                 <div class="decade">
                                     <i class="fa-solid fa-palette"></i>
                                     <h5>Art & Craft</h5>
-                        </div>
-                        </div>
-
-                        <div class="col-md-2 col-sm-12">
-                            <div class="decade">
-                                <i class="fa-solid fa-chalkboard"></i>
-                                <h5>Foundation Class</h5>
-                    </div>
-                    </div>
-                    <div class="col-md-2 col-sm-12">
-                        <div class="decade">
-                            <i class="fa-solid fa-graduation-cap"></i>
-                            <h5>Alumini Platform</h5>
-                </div>
-                </div>
-
+                                </div>
                             </div>
+
+                            <div class="col-md-2 col-sm-12">
+                                <div class="decade">
+                                    <i class="fa-solid fa-chalkboard"></i>
+                                    <h5>Foundation Class</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-2 col-sm-12">
+                                <div class="decade">
+                                    <i class="fa-solid fa-graduation-cap"></i>
+                                    <h5>Alumini Platform</h5>
+                                </div>
+                            </div>
+
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2"> </div>
+            <div class="admission-con">
+                <div class="col-md-8">
+                    <h5>Request For Admission</h5>
+                    <div class="no">
+                        <i class="fa-solid fa-phone"></i>
+                        <h3>+91-94619 01450</h3>
+                    </div>
+                    <div class="button">REQUEST NOW</div>
+                </div>
+            </div>
+
+<div class="col-md-2"></div>
+
+
+
+
+        </div>
+    </div>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
