--- a/index.html
+++ b/index.html
@@ -432,9 +432,102 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2"> </div>
+            <div class="col-md-8">
+                <div class="req">
+                    <div class="row">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-4 ">
+                            Request For Admission
+                            <div class="no"> <i class="fa-solid fa-phone"></i>+91-9461901450</div>
+                        </div>
+                        <div class="col-md-2 "></div>
+                        <div class="col-md-2" id="now">REQUEST NOW</div>
+                        <div class="col-md-2"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"> </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 ">
+                    <div class="foot1">
+                        <img src="./photos/logo.jpg" alt="" height="25px" width="30px"> APALA SCHOOL OF EDUCATION
+                    </div>
+                </div>
+                <div class="col-md-4 ">
+                    <div class="foot2">
+                        ADDRESS
+                        <div class="line">_________</div>
+                            <div class="add">
+                                <div class="row">
+                            <div class="col-md-2 ">
+                                <i class="fa-solid fa-location-dot"></i></div>
+                             <div class="col-md-10 ">
+                                APALA SCHOOL OF EDUCATION, NOHAR Address : Opp.
+                                Nohar Bhadra Highway,</div>
+                            </div>
+                       </div>
+                
+                       <div class="num">
+                        <div class="row">
+                            <div class="col-md-2"><i class="fa-solid fa-square-phone"></i></div>
+                            <div class="col-md-10">+91-90797 24216  +91-94619 01450</div>
+                        </div>
+                       </div>
 
+
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="foot3">
+                        OUICK LINKS
+                        <div class="line">__________</div>
+                       <div class="hme">
+                        <div class="row">
+                            <div class="col-md-2"><i class="fa-solid fa-angle-right"></i></div>
+                            <div class="col-md-10">Home</div>
+                        </div>
+                       </div>
   
-    
+                        <div class="tc">
+                            <div class="row">
+                                <div class="col-md-2"><i class="fa-solid fa-angle-right"></i></div>
+                                <div class="col-md-10">TC</div>
+                            </div>
+                        </div>
+
+                        <div class="abt ">
+                            <div class="row">
+                                <div class="col-md-2 "><i class="fa-solid fa-angle-right"></i></div>
+                              <div class="col-md-10 ">About Us</div>
+                            </div>
+                        </div>
+
+                        <div class="cnt ">
+                            <div class="row">
+                                <div class="col-md-2 "><i class="fa-solid fa-angle-right"></i></div>
+                                <div class="col-md-10 ">Contact Us</div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </div>
+    </div>
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
