--- a/message.html
+++ b/message.html
@@ -131,10 +131,10 @@
         <div class="col-md-8 order-md-2 col-sm-12 " style="padding-right: 0; padding-left: 0;">
             <h2 class="featurette-heading">Principal Message </h2>
             <p class="lead1">Dear Parents & Students</p>
-            <p class="lead2">It's my pleasure to welcome you to sanskar Intemational School, (SIS) ensures a secure, emotionally
+            <p class="lead2">It's my pleasure to welcome you to Apala School of Education, Apala ensures a secure, emotionally
                 balanced and healthy environment to all our students.
                 One of the biggest goal for the year is to have all round development of your child and ensure his/her
-                academic excellence. SIS Planner is designed to help the child in organizing his daily, weekly and long term
+                academic excellence. Apala Planner is designed to help the child in organizing his daily, weekly and long term
                 assignments. It will also develop his/her organizational skills. This planner will also act as a communicative tool
                 between the parents and teachers.
                 We request you to notify the changes in the record of the student such as an address, telephone number,
