--- a/message.html
+++ b/message.html
@@ -147,7 +147,99 @@
         </div>
     </div>
 </div>
+<div class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 ">
+                <div class="foot1">
+                    <img src="./photos/logo.jpg" alt="" height="25px" width="30px"> APALA SCHOOL OF EDUCATION
+                </div>
+                <div class="map">
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3482.5773070023297!2d74.78460687459642!3d29.20656905778359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjnCsDEyJzIzLjYiTiA3NMKwNDcnMTMuOSJF!5e0!3m2!1sen!2sin!4v1716877171806!5m2!1sen!2sin"
+                                width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="col-md-4 ">
+                <div class="foot2">
+                    ADDRESS
+                    <div class="line">_________</div>
+                    <div class="add">
+                        <div class="row">
+                            <div class="col-md-2 ">
+                                <i class="fa-solid fa-location-dot"></i>
+                            </div>
+                            <div class="col-md-10 ">
+                                APALA SCHOOL OF EDUCATION, NOHAR Address : Opp.
+                                Nohar Bhadra Highway,</div>
+                        </div>
+                    </div>
+
+                    <div class="num">
+                        <div class="row">
+                            <div class="col-md-2"><i class="fa-solid fa-square-phone"></i></div>
+                            <div class="col-md-10">+91-90797 24216 +91-94619 01450</div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="foot3">
+                    OUICK LINKS
+                    <div class="line">__________</div>
+                    <div class="hme">
+                        <div class="row">
+                            <div class="col-md-2"><i class="fa-solid fa-angle-right"></i></div>
+                            <div class="col-md-10">Home</div>
+                        </div>
+                    </div>
+
+                    <div class="tc">
+                        <div class="row">
+                            <div class="col-md-2"><i class="fa-solid fa-angle-right"></i></div>
+                            <div class="col-md-10">TC</div>
+                        </div>
+                    </div>
+
+                    <div class="abt ">
+                        <div class="row">
+                            <div class="col-md-2 "><i class="fa-solid fa-angle-right"></i></div>
+                            <div class="col-md-10 ">About Us</div>
+                        </div>
+                    </div>
+
+                    <div class="cnt ">
+                        <div class="row">
+                            <div class="col-md-2 "><i class="fa-solid fa-angle-right"></i></div>
+                            <div class="col-md-10 ">Contact Us</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+</div>
+
+
+<div class="container8">
+    <div class="copyright">
+        COPYRIGHT 2024 ALL RIGHTS RESERVED<span> Desgin & Maintain by.<a href="#"> Raghav Aggarwal</a> </span>
+    </div>
+
+</div>
 
 
 
