--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         About Us
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Principal Message</a>
+                        <a class="dropdown-item" href="message.html">Principal Message</a>
                         <a class="dropdown-item" href="#">Faculty</a>
                         <a class="dropdown-item" href="#">School Uniform</a>
                         <a class="dropdown-item" href="#">Our School</a>
@@ -117,7 +117,7 @@
                         Gallery
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#"> Photos Gallery</a>
+                        <a class="dropdown-item" href="gallery.html"> Photos Gallery</a>
                     </div>
                 <li class="nav-item ">
                     <a class="nav-link" href="#">Contact Us <span class="sr-only"></span></a>
