--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                         About Us
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="message.html">Principal Message</a>
+                        <a class="dropdown-item" href="./message.html">Principal Message</a>
                         <a class="dropdown-item" href="#">Faculty</a>
                         <a class="dropdown-item" href="#">School Uniform</a>
-                        <a class="dropdown-item" href="#">Our School</a>
-                        <a class="dropdown-item" href="#">School Rules</a>
+                        <a class="dropdown-item" href="ourschl.html">Our School</a>
+                        <a class="dropdown-item" href="rule.html">School Rules</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -99,8 +99,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Procedure for Registration</a>
-                        <a class="dropdown-item" href="#">Fee Norms</a>
-                        <a class="dropdown-item" href="#">Fee Structure</a>
+                        <a class="dropdown-item" href="fee.html">Fee Structure</a>
                         <a class="dropdown-item" href="#">Entrance Syllabus</a>
 
                 <li class="nav-item dropdown">
@@ -109,7 +108,7 @@
                         Mandatory Public Disclosure
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#"> Mandatory Public Disclosure</a>
+                        <a class="dropdown-item" href="disclosure.html"> Mandatory Public Disclosure</a>
                     </div>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -117,7 +116,7 @@
                         Gallery
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="gallery.html"> Photos Gallery</a>
+                        <a class="dropdown-item " href="gallery.html" > Photos Gallery</a>
                     </div>
                 <li class="nav-item ">
                     <a class="nav-link" href="#">Contact Us <span class="sr-only"></span></a>
@@ -498,7 +497,7 @@
                         <div class="hme">
                             <div class="row">
                                 <div class="col-md-2"><i class="fa-solid fa-angle-right"></i></div>
-                                <div class="col-md-10">Home</div>
+                                <div class="col-md-10"><a href="index.html">Home</a></div>
                             </div>
                         </div>
 
@@ -535,8 +534,9 @@
     
     <div class="container8">
             <div class="copyright">
-                COPYRIGHT 2024 ALL RIGHTS RESERVED
+                COPYRIGHT 2024 ALL RIGHTS RESERVED<span> Desgin & Maintain by.<a href="#"> Raghav Aggarwal</a> </span>
             </div>
+            
         </div>
 
 
