--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
         <a class="navbar-brand" href="#" style="font-weight: 700; font-family: 'Times New Roman', Times, serif;"><img
                 src="./photos/logo.jpg" alt="" height="50px" width="42px">Apala School of Education</a>
@@ -41,8 +41,8 @@
                         <a class="dropdown-item" href="./message.html">Principal Message</a>
                         <a class="dropdown-item" href="#">Faculty</a>
                         <a class="dropdown-item" href="#">School Uniform</a>
-                        <a class="dropdown-item" href="#">Our School</a>
-                        <a class="dropdown-item" href="#">School Rules</a>
+                        <a class="dropdown-item" href="ourschl.html">Our School</a>
+                        <a class="dropdown-item" href="rule.html">School Rules</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -99,8 +99,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Procedure for Registration</a>
-                        <a class="dropdown-item" href="#">Fee Norms</a>
-                        <a class="dropdown-item" href="#">Fee Structure</a>
+                        <a class="dropdown-item" href="fee.html">Fee Structure</a>
                         <a class="dropdown-item" href="#">Entrance Syllabus</a>
 
                 <li class="nav-item dropdown">
@@ -109,7 +108,7 @@
                         Mandatory Public Disclosure
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#"> Mandatory Public Disclosure</a>
+                        <a class="dropdown-item" href="disclosure.html"> Mandatory Public Disclosure</a>
                     </div>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -305,7 +304,7 @@
                         <div class="hme">
                             <div class="row">
                                 <div class="col-md-2"><i class="fa-solid fa-angle-right"></i></div>
-                                <div class="col-md-10">Home</div>
+                                <div class="col-md-10"><a href="index.html">Home</a></div>
                             </div>
                         </div>
 
