--- a/message.html
+++ b/message.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
         <a class="navbar-brand" href="#" style="font-weight: 700; font-family: 'Times New Roman', Times, serif;"><img
                 src="./photos/logo.jpg" alt="" height="50px" width="42px">Apala School of Education</a>
@@ -41,8 +41,8 @@
                         <a class="dropdown-item" href="./message.html">Principal Message</a>
                         <a class="dropdown-item" href="#">Faculty</a>
                         <a class="dropdown-item" href="#">School Uniform</a>
-                        <a class="dropdown-item" href="#">Our School</a>
-                        <a class="dropdown-item" href="#">School Rules</a>
+                        <a class="dropdown-item" href="ourschl.html">Our School</a>
+                        <a class="dropdown-item" href="rule.html">School Rules</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -99,8 +99,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Procedure for Registration</a>
-                        <a class="dropdown-item" href="#">Fee Norms</a>
-                        <a class="dropdown-item" href="#">Fee Structure</a>
+                        <a class="dropdown-item" href="fee.html">Fee Structure</a>
                         <a class="dropdown-item" href="#">Entrance Syllabus</a>
 
                 <li class="nav-item dropdown">
@@ -109,7 +108,7 @@
                         Mandatory Public Disclosure
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#"> Mandatory Public Disclosure</a>
+                        <a class="dropdown-item" href="disclosure.html"> Mandatory Public Disclosure</a>
                     </div>
                 <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -127,11 +126,11 @@
         </div>
     </nav>
 <div class="container-fluid">
-    <div class="row featurette" style="margin-left: 0px; margin-right: 0px;" >
-        <div class="col-md-8 order-md-1 col-sm-12 " style="padding-right: 0; padding-left: 0;">
+    <div class="row featurette" style="margin-left: 0px; margin-right: 0px; margin-top: 100px;" >
+        <div class="col-md-7 order-md-2 col-sm-12 " style="padding-right: 0; padding-left: 0;">
             <h2 class="featurette-heading">Principal Message </h2>
             <p class="lead1">Dear Parents & Students</p>
-            <p class="lead2">It's my pleasure to welcome you to Apala School of Education, Apala ensures a secure, emotionally
+            <p class="lead2">It's my pleasure to welcome you to Apala School Of Education, Apala ensures a secure, emotionally
                 balanced and healthy environment to all our students.
                 One of the biggest goal for the year is to have all round development of your child and ensure his/her
                 academic excellence. Apala Planner is designed to help the child in organizing his daily, weekly and long term
@@ -141,22 +140,23 @@
                 mobile number etc. We welcome your participation and support during the academic year. Please take a
                 moment and visit our school website. you may feel free to contact me with any queries or concerns.</p>
         </div>
-        <div class="col-md-4 order-md-2 col-sm-12 ">
+        <div class="col-md-5 order-md-1 col-sm-12">
             <img src="./photos/man.jpg" alt="" width="300" height="300" style="border-radius: 50%;">
 
         </div>
     </div>
 </div>
+
 <div class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4 ">
+            <div class="col-md-4 col-sm-12">
                 <div class="foot1">
                     <img src="./photos/logo.jpg" alt="" height="25px" width="30px"> APALA SCHOOL OF EDUCATION
                 </div>
                 <div class="map">
                     <div class="row">
-                        <div class="col-md-12 col-sm-12">
+                        <div class="col-md-12 ">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3482.5773070023297!2d74.78460687459642!3d29.20656905778359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjnCsDEyJzIzLjYiTiA3NMKwNDcnMTMuOSJF!5e0!3m2!1sen!2sin!4v1716877171806!5m2!1sen!2sin"
                                 width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
@@ -166,7 +166,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 ">
+            <div class="col-md-4 col-sm-12">
                 <div class="foot2">
                     ADDRESS
                     <div class="line">_________</div>
@@ -183,7 +183,7 @@
 
                     <div class="num">
                         <div class="row">
-                            <div class="col-md-2"><i class="fa-solid fa-square-phone"></i></div>
+                            <div class="col-md-2 "><i class="fa-solid fa-square-phone"></i></div>
                             <div class="col-md-10">+91-90797 24216 +91-94619 01450</div>
                         </div>
                     </div>
@@ -192,14 +192,14 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                 <div class="foot3">
                     OUICK LINKS
                     <div class="line">__________</div>
                     <div class="hme">
                         <div class="row">
                             <div class="col-md-2"><i class="fa-solid fa-angle-right"></i></div>
-                            <div class="col-md-10">Home</div>
+                            <div class="col-md-10"><a href="index.html">Home</a></div>
                         </div>
                     </div>
 
@@ -240,7 +240,6 @@
     </div>
 
 </div>
-
 
 
 
