--- a/ourschl.html
+++ b/ourschl.html
@@ -53,10 +53,10 @@
                         Academics
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Activity Calender</a>
-                        <a class="dropdown-item" href="#">Celebrations</a>
-                        <a class="dropdown-item" href="#">Annual Report</a>
-                        <a class="dropdown-item" href="#">Booklist</a>
+                        <a class="dropdown-item" href="activity.html">Activity Calender</a>
+                        <a class="dropdown-item" href="celeb.html">Celebrations</a>
+                        <a class="dropdown-item" href="annual.html">Annual Report</a>
+                        <a class="dropdown-item" href="book.html">Booklist</a>
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                             style="margin-left: 17px;">
@@ -77,20 +77,20 @@
                         Amenities
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Physics Lab</a>
-                        <a class="dropdown-item" href="#">It & CS Lab</a>
-                        <a class="dropdown-item" href="#">Chemistry Lab</a>
-                        <a class="dropdown-item" href="#">Bio Lab</a>
-                        <a class="dropdown-item" href="#">Library</a>
-                        <a class="dropdown-item" href="#">Music Room </a>
-                        <a class="dropdown-item" href="#">Auditorium Room</a>
-                        <a class="dropdown-item" href="#">Art & Craft Room</a>
-                        <a class="dropdown-item" href="#">Indoor Table Tennis Ground</a>
-                        <a class="dropdown-item" href="#">Football Ground</a>
-                        <a class="dropdown-item" href="#">Batminton Ground</a>
-                        <a class="dropdown-item" href="#">Cricket Net Practise Ground</a>
-                        <a class="dropdown-item" href="#">Small Garden Area for Kids </a>
-                        <a class="dropdown-item" href="#">Transportation System</a>
+                        <a class="dropdown-item" href="phy.html">Physics Lab</a>
+                        <a class="dropdown-item" href="cs.html">It & CS Lab</a>
+                        <a class="dropdown-item" href="chemis.html">Chemistry Lab</a>
+                        <a class="dropdown-item" href="bio.html">Bio Lab</a>
+                        <a class="dropdown-item" href="lib.html">Library</a>
+                        <a class="dropdown-item" href="music.html">Music Room </a>
+                        <a class="dropdown-item" href="audi.html">Auditorium Room</a>
+                        <a class="dropdown-item" href="art.html">Art & Craft Room</a>
+                        <a class="dropdown-item" href="indoor.html">Indoor Table Tennis Ground</a>
+                        <a class="dropdown-item" href="foot.html">Football Ground</a>
+                        <a class="dropdown-item" href="batmin.html">Batminton Ground</a>
+                        <a class="dropdown-item" href="cric.html">Cricket Net Practise Ground</a>
+                        <a class="dropdown-item" href="gard.html">Small Garden Area for Kids </a>
+                        <a class="dropdown-item" href="trans.html">Transportation System</a>
                     </div>
                 </li>
 
@@ -100,9 +100,9 @@
                         Admission
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Procedure for Registration</a>
+                 
                         <a class="dropdown-item" href="fee.html">Fee Structure</a>
-                        <a class="dropdown-item" href="#">Entrance Syllabus</a>
+                        <a class="dropdown-item" href="syllabus.html">Entrance Syllabus</a>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
