--- a/rule.html
+++ b/rule.html
@@ -52,10 +52,10 @@
                         Academics
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Activity Calender</a>
-                        <a class="dropdown-item" href="#">Celebrations</a>
-                        <a class="dropdown-item" href="#">Annual Report</a>
-                        <a class="dropdown-item" href="#">Booklist</a>
+                        <a class="dropdown-item" href="activity.html">Activity Calender</a>
+                        <a class="dropdown-item" href="celeb.html">Celebrations</a>
+                        <a class="dropdown-item" href="annual.html">Annual Report</a>
+                        <a class="dropdown-item" href="book.html">Booklist</a>
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                             style="margin-left: 17px;">
@@ -76,20 +76,20 @@
                         Amenities
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Physics Lab</a>
-                        <a class="dropdown-item" href="#">It & CS Lab</a>
-                        <a class="dropdown-item" href="#">Chemistry Lab</a>
-                        <a class="dropdown-item" href="#">Bio Lab</a>
-                        <a class="dropdown-item" href="#">Library</a>
-                        <a class="dropdown-item" href="#">Music Room </a>
-                        <a class="dropdown-item" href="#">Auditorium Room</a>
-                        <a class="dropdown-item" href="#">Art & Craft Room</a>
-                        <a class="dropdown-item" href="#">Indoor Table Tennis Ground</a>
-                        <a class="dropdown-item" href="#">Football Ground</a>
-                        <a class="dropdown-item" href="#">Batminton Ground</a>
-                        <a class="dropdown-item" href="#">Cricket Net Practise Ground</a>
-                        <a class="dropdown-item" href="#">Small Garden Area for Kids </a>
-                        <a class="dropdown-item" href="#">Transportation System</a>
+                        <a class="dropdown-item" href="phy.html">Physics Lab</a>
+                        <a class="dropdown-item" href="cs.html">It & CS Lab</a>
+                        <a class="dropdown-item" href="chemis.html">Chemistry Lab</a>
+                        <a class="dropdown-item" href="bio.html">Bio Lab</a>
+                        <a class="dropdown-item" href="lib.html">Library</a>
+                        <a class="dropdown-item" href="music.html">Music Room </a>
+                        <a class="dropdown-item" href="audi.html">Auditorium Room</a>
+                        <a class="dropdown-item" href="art.html">Art & Craft Room</a>
+                        <a class="dropdown-item" href="indoor.html">Indoor Table Tennis Ground</a>
+                        <a class="dropdown-item" href="foot.html">Football Ground</a>
+                        <a class="dropdown-item" href="batmin.html">Batminton Ground</a>
+                        <a class="dropdown-item" href="cric.html">Cricket Net Practise Ground</a>
+                        <a class="dropdown-item" href="gard.html">Small Garden Area for Kids </a>
+                        <a class="dropdown-item" href="trans.html">Transportation System</a>
                     </div>
                 </li>
 
@@ -99,9 +99,9 @@
                         Admission
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Procedure for Registration</a>
+                       >
                         <a class="dropdown-item" href="fee.html">Fee Structure</a>
-                        <a class="dropdown-item" href="#">Entrance Syllabus</a>
+                        <a class="dropdown-item" href="syllabus.html">Entrance Syllabus</a>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -128,8 +128,8 @@
     </nav>
 
 
-    <div class="container-fluid">
-        <div class="row featurette" style="margin-left: 0px; margin-right: 0px; margin-top: 100PX;">
+    <div class="container-fluid" >
+        <div class="row featurette" style="margin-left: 0px; margin-right: 0px; margin-top:100px;">
             <div class="col-md-7 order-md-2 col-sm-7 " style="padding-right: 0; padding-left: 0; ">
                 <h2 class="featurette-heading">Rules </h2>
                 <p class="lead1">Apala School Of Education</p>
@@ -249,7 +249,7 @@
                     </b></p>
             </div>
             <div class="col-md-5 order-md-1 ">
-                <img src="./photos/schoolimg1.jpg" class="img-fluid" width="400" height="300">
+                <img src="./photos/rule1.png" class="img-fluid" width="400" height="300">
 
             </div>
         </div>
